--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
         </div>
     </header>
 
+    <section class="home">
+        <div class="content">
+            <h1>Wonderful. <br><span>Place.</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
+                ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
+                veritatis numquam perspiciatis, dignissimos quod veniam impedit iusto earum
+                consectetur! Quod minus alias commodi? Vel, accusamus repellendus temporibus
+                deleniti culpa architecto ratione voluptas adipisci.
+            </p>
+            <a href="#">Read More</a>
+        </div>
+
+        <div class="media-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+    </section>
 
     <script src="./assets/js/main.js"></script>
 </body>
