04. js-travel-02-mini. Some responsive. Show, hide menu.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <a href="#" class="brand">Travel</a>
 
-        <div class="navigation">
+        <div class="navigation" id="navigation">
             <div class="navigation-items">
                 <a href="#">Home</a>
                 <a href="#">About</a>
@@ -24,6 +24,8 @@
                 <a href="#">Contact</a>
             </div>
         </div>
+
+        <div class="menu-btn" id="menu-btn"></div>
     </header>
 
     <section class="home">
