05. js-travel-02-mini. Fimal responsive. Slider video bg.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,58 @@
     </header>
 
     <section class="home">
+        <video src="./assets/videos/1.mp4" autoplay muted loop class="video-slide active"></video>
+        <video src="./assets/videos/2.mp4" autoplay muted loop class="video-slide"></video>
+        <video src="./assets/videos/3.mp4" autoplay muted loop class="video-slide"></video>
+        <video src="./assets/videos/4.mp4" autoplay muted loop class="video-slide"></video>
+        <video src="./assets/videos/5.mp4" autoplay muted loop class="video-slide"></video>
+
+        <div class="content active">
+            <h1>Wonderful. <br><span>Places.</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
+                ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
+                veritatis numquam perspiciatis, dignissimos quod veniam impedit iusto earum
+                consectetur! Quod minus alias commodi? Vel, accusamus repellendus temporibus
+                deleniti culpa architecto ratione voluptas adipisci.
+            </p>
+            <a href="#">Read More</a>
+        </div>
         <div class="content">
-            <h1>Wonderful. <br><span>Place.</span></h1>
+            <h1>Forest. <br><span>Lake.</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
+                ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
+                veritatis numquam perspiciatis, dignissimos quod veniam impedit iusto earum
+                consectetur! Quod minus alias commodi? Vel, accusamus repellendus temporibus
+                deleniti culpa architecto ratione voluptas adipisci.
+            </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="content">
+            <h1>Beauty. <br><span>Of Sand.</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
+                ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
+                veritatis numquam perspiciatis, dignissimos quod veniam impedit iusto earum
+                consectetur! Quod minus alias commodi? Vel, accusamus repellendus temporibus
+                deleniti culpa architecto ratione voluptas adipisci.
+            </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="content">
+            <h1>Turkey. <br><span>For You.</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
+                ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
+                veritatis numquam perspiciatis, dignissimos quod veniam impedit iusto earum
+                consectetur! Quod minus alias commodi? Vel, accusamus repellendus temporibus
+                deleniti culpa architecto ratione voluptas adipisci.
+            </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="content">
+            <h1>Palm. <br><span>Beaches.</span></h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus,
                 ducimus inventore sequi facilis dicta officiis quis atque vel magnam dolorum
@@ -45,6 +95,14 @@
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+
+        <div class="slider-navigation">
+            <div class="nav-btn active"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
         </div>
     </section>
 
